Bug 122756 - Unable to clone currency and other cell Number format in a Writer table
Summary: Unable to clone currency and other cell Number format in a Writer table
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.2.0 target:24.8.0.2 target:...
Keywords:
Depends on:
Blocks: Number-Format Clone-Formatting
  Show dependency treegraph
 
Reported: 2019-01-16 13:29 UTC by Marina Latini (SUSE)
Modified: 2025-02-26 13:01 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Example file with several different currency formats in a table (12.79 KB, application/vnd.oasis.opendocument.text)
2024-04-03 09:22 UTC, Gabor Kelemen (Collabora)
Details
The example file before copying formats from the first row (31.93 KB, image/png)
2024-04-03 09:23 UTC, Gabor Kelemen (Collabora)
Details
After copying formatting, only para style is copied but not the currency formatting (31.13 KB, image/png)
2024-04-03 09:24 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Marina Latini (SUSE) 2019-01-16 13:29:00 UTC
Description:
If a cell contains a value formatted as currency is not possible to clone the format to a different cell.

Steps to Reproduce:
1. Open a new Writer document
2. Insert a table with 1 row and 2 columns
3. In cell A1 type 3
4. In cell A2 type 4
5. Select the content in A1
6. Table -> Number format
7. Select one of the format under the "Currency" category
8. The content will be formatted as currency. For example 3 €
9. Select the clone formatting tool+CTRL and try to apply the format to the content in cell A2

Actual Results:
The new format is only partially applied.
Only the alignment is correct but the content is formatted as text, not as currency 

Expected Results:
The content in cell A2 should be formatted as currency, with the same format as cell A1


Reproducible: Always


User Profile Reset: No



Additional Info:
Tested on 
Version: 6.2.0.2
Build ID: 2ce5217b30a543f7666022df50f0562f82be0cff
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: en-US (en_US); UI-Language: en-US
Calc: threaded
Comment 1 Dieter 2019-01-16 14:27:50 UTC
I confirm it with

Version: 6.3.0.0.alpha0+ (x64)
Build ID: 411f3a050ac2be598019d512f8ccfe041080c28f
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-01-14_03:17:11
Locale: en-US (de_DE); UI-Language: en-US
Calc: threaded
Comment 2 Timur 2019-01-17 11:10:17 UTC
It seems that Number format cannot be clone formatted at all since OO.
Comment 3 QA Administrators 2023-01-08 03:23:38 UTC Comment hidden (obsolete)
Comment 4 Gabor Kelemen (Collabora) 2024-04-03 09:22:49 UTC
Created attachment 193454 [details]
Example file with several different currency formats in a table
Comment 5 Gabor Kelemen (Collabora) 2024-04-03 09:23:28 UTC
Created attachment 193455 [details]
The example file before copying formats from the first row
Comment 6 Gabor Kelemen (Collabora) 2024-04-03 09:24:06 UTC
Created attachment 193456 [details]
After copying formatting, only para style is copied but not the currency formatting
Comment 7 Commit Notification 2024-07-15 18:10:55 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3e4aa127416a5947882e6644409468aa1ca039ae

tdf#122756 clone formatting includes table number format

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2024-07-17 19:01:56 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/42b82c4411ca9f930fa3742a0a82495f49367cb2

tdf#122756 clone formatting includes table number format

It will be available in 24.8.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2024-07-20 04:00:41 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/ab86927e541cedad2adfd56e3c34abd04abc0db6

tdf#122756 clone formatting includes table number format

It will be available in 24.2.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Marina Latini (SUSE) 2024-11-29 20:23:45 UTC
verified fixed on:

Version: 24.8.1.2 (X86_64) / LibreOffice Community
Build ID: 480(Build:2)
CPU threads: 8; OS: Linux 5.14; UI render: default; VCL: kf5 (cairo+xcb)
Locale: de-DE (en_GB.UTF-8); UI: en-US
Calc: threaded
Comment 11 Marina Latini (SUSE) 2024-11-29 20:24:39 UTC
switching to verified - fixed, see comment #10
Comment 12 Commit Notification 2025-02-26 13:01:37 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2d8f6291a6360e2a7694240fb27503fac734a31b

tdf#122756: sw_uiwriter9: Add unittest

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.