tdf#122756 clone formatting includes table number format

In clone formatting the number format of the current cell(s)
is copied and applied if the target is a table

Change-Id: I0b7dc1d5015aeb2262c8d37f76442519c5b6d655
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168184
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>
Tested-by: Jenkins
(cherry picked from commit 3e4aa127416a5947882e6644409468aa1ca039ae)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/170875
Tested-by: Thorsten Behrens <thorsten.behrens@allotropia.de>